--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Windows 98</title>
-        <meta name="author" content="Viorel">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="style.css" rel="stylesheet">
-    </head>
-    <body>
-        <script src="app.js"></script>
-    </body>
+
+<head>
+    <title>Windows 98</title>
+    <meta name="author" content="Viorel">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet">
+</head>
+
+<body>
+    <div id="start-bar">
+        <div id="start-bar-top-border"></div>
+        <div id="start">Start</div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div id="taskbar-notification"></div>
+    </div>
+
+    <script src="app.js"></script>
+</body>
+
 </html>
