start menu - frame

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
         <div id="taskbar-notification"></div>
     </div>
 
+    <div id="start-menu">
+        <ul>
+            <li>Norton SystemWorks</li>
+            <li>Windows Update</li>
+            <li>Programs</li>
+            <li>Favorites</li>
+            <li>Documments</li>
+            <li>Settings</li>
+            <li>Find</li>
+            <li>Help</li>
+            <li>Run...</li>
+            <li>Log Off Archive...</li>
+            <li>Shut Down</li>
+        </ul>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
