start-menu-margin-frame

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
     </div>
 
     <div id="start-menu">
+        <div id="start-menu-margin"></div>
         <ul>
             <li>Norton SystemWorks</li>
-            <li>Windows Update</li>
+            <li>Windows Update</li><hr>
             <li>Programs</li>
             <li>Favorites</li>
             <li>Documments</li>
             <li>Settings</li>
             <li>Find</li>
             <li>Help</li>
-            <li>Run...</li>
+            <li>Run...</li><hr>
             <li>Log Off Archive...</li>
             <li>Shut Down</li>
         </ul>
