--- a/index.html
+++ b/index.html
@@ -22,17 +22,44 @@
         <div id="start-menu-margin"></div>
         <ul>
             <li>Norton SystemWorks</li>
-            <li>Windows Update</li><hr>
+            <li>Windows Update</li>
+            <hr>
             <li>Programs</li>
             <li>Favorites</li>
             <li>Documments</li>
             <li>Settings</li>
             <li>Find</li>
             <li>Help</li>
-            <li>Run...</li><hr>
+            <li>Run...</li>
+            <hr>
             <li>Log Off Archive...</li>
             <li>Shut Down</li>
         </ul>
+    </div>
+
+    <div class="icon">
+        <img src="https://i.ibb.co/Fz7XL7z/my-computer.png">
+        <p>My Computer</p>
+    </div>
+
+    <div class="icon">
+        <img src="https://i.ibb.co/TgXLNyp/my-docs.png">
+        <p>My Documents</p>
+    </div>
+
+    <div class="icon">
+        <img src="https://i.ibb.co/bHmmSH9/internet.png">
+        <p>Internet Explorer</p>
+    </div>
+
+    <div class="icon">
+        <img src="https://i.ibb.co/1L9h6cV/net.png">
+        <p>Network</p>
+    </div>
+
+   <div class="icon" id="recycle-bin">
+        <img src="https://i.ibb.co/syBDpgj/rb.png">
+        <p>Recycle Bin</p>
     </div>
 
     <script src="app.js"></script>
