--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
         <p>Recycle Bin</p>
     </div>
 
+    <div class="window">
+        <div class="window-header">
+        </div>
+        <div class="window-menu">
+            <ul>
+                <li><u>F</u>ile</li>
+                <li><u>E</u>dit</li>
+                <li><u>V</u>iew</li>
+                <li><u>G</u>o</li>
+                <li><u>F</u>avorites</li>
+                <li><u>H</u>elp</li>
+            </ul>
+            <img class="logo" src="https://i.ibb.co/4WdrJQ5/logo.png">
+        </div>
+        <div class="window-nav">
+
+        </div>
+        <div class="window-address">
+            <span>Address</span>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
