try to create window class

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
         </ul>
     </div>
 
-    <div class="icon">
+    <div class="icon" id="computer">
         <img src="https://i.ibb.co/Fz7XL7z/my-computer.png">
         <p>My Computer</p>
     </div>
 
-    <div class="icon">
+    <div class="icon" id="documents">
         <img src="https://i.ibb.co/TgXLNyp/my-docs.png">
         <p>My Documents</p>
     </div>
 
-    <div class="icon">
+    <div class="icon" id="internet">
         <img src="https://i.ibb.co/bHmmSH9/internet.png">
         <p>Internet Explorer</p>
     </div>
@@ -62,7 +62,7 @@
         <p>Recycle Bin</p>
     </div>
 
-    <div class="window">
+    <!-- <div class="window">
         <div class="window-header">
         </div>
         <div class="window-menu">
@@ -71,7 +71,6 @@
                 <li><u>E</u>dit</li>
                 <li><u>V</u>iew</li>
                 <li><u>G</u>o</li>
-                <li><u>F</u>avorites</li>
                 <li><u>H</u>elp</li>
             </ul>
             <img class="logo" src="https://i.ibb.co/4WdrJQ5/logo.png">
@@ -82,7 +81,10 @@
         <div class="window-address">
             <span>Address</span>
         </div>
-    </div>
+        <div class="menu">
+
+        </div>
+    </div> -->
 
     <script src="app.js"></script>
 </body>
