--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </ul>
     </div>
 
-    <div class="icon" id="computer">
+    <!-- <div class="icon" id="computer">
         <img src="https://i.ibb.co/Fz7XL7z/my-computer.png">
         <p>My Computer</p>
-    </div>
+    </div> -->
 
-    <div class="icon" id="documents">
+    <!-- <div class="icon" id="documents">
         <img src="https://i.ibb.co/TgXLNyp/my-docs.png">
         <p>My Documents</p>
     </div>
@@ -60,7 +60,7 @@
    <div class="icon" id="recycle-bin">
         <img src="https://i.ibb.co/syBDpgj/rb.png">
         <p>Recycle Bin</p>
-    </div>
+    </div> -->
 
     <!-- <div class="window">
         <div class="window-header">
