--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div id="start-menu">
         <div id="start-menu-margin"></div>
         <ul>
-            <li>Norton SystemWorks</li>
-            <li>Windows Update</li>
+            <li><img>Windows Update</li>
             <hr>
             <li>Programs</li>
             <li>Favorites</li>
@@ -36,31 +35,6 @@
             <li>Shut Down</li>
         </ul>
     </div>
-
-    <!-- <div class="icon" id="computer">
-        <img src="https://i.ibb.co/Fz7XL7z/my-computer.png">
-        <p>My Computer</p>
-    </div> -->
-
-    <!-- <div class="icon" id="documents">
-        <img src="https://i.ibb.co/TgXLNyp/my-docs.png">
-        <p>My Documents</p>
-    </div>
-
-    <div class="icon" id="internet">
-        <img src="https://i.ibb.co/bHmmSH9/internet.png">
-        <p>Internet Explorer</p>
-    </div>
-
-    <div class="icon">
-        <img src="https://i.ibb.co/1L9h6cV/net.png">
-        <p>Network</p>
-    </div>
-
-   <div class="icon" id="recycle-bin">
-        <img src="https://i.ibb.co/syBDpgj/rb.png">
-        <p>Recycle Bin</p>
-    </div> -->
 
     <!-- <div class="window">
         <div class="window-header">
