--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <div id="start-bar">
         <div id="start-bar-top-border"></div>
-        <div id="start">Start</div>
+        <div id="start">
+            <img src="https://i.ibb.co/L8m239F/log-start.png">
+            Start
+        </div>
         <div class="bar"></div>
         <div class="bar"></div>
         <div id="taskbar-notification"></div>
