display inline icons taskbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             Start
         </div>
         <div class="bar"></div>
+        <div id="taskbar-icons"></div>
         <div class="bar"></div>
         <div id="taskbar-notification"></div>
     </div>
