--- a/index.html
+++ b/index.html
@@ -10,35 +10,44 @@
 </head>
 
 <body>
-    <div id="start-bar">
-        <div id="start-bar-top-border"></div>
-        <div id="start">
-            <img src="https://i.ibb.co/L8m239F/log-start.png">
-            Start
+    <div id="boot">
+        <audio>
+            <source src="https://www.winhistory.de/more/winstart/ogg/win98.ogg" type="audio/ogg">
+        </audio>
+    </div>
+    <div id="win98">
+        <div id="start-bar">
+            <div id="start-bar-top-border"></div>
+            <div id="start">
+                <img src="https://i.ibb.co/L8m239F/log-start.png">
+                Start
+            </div>
+            <div class="bar"></div>
+            <div id="taskbar-icons"></div>
+            <div class="bar"></div>
+            <div id="taskbar-notification"></div>
         </div>
-        <div class="bar"></div>
-        <div id="taskbar-icons"></div>
-        <div class="bar"></div>
-        <div id="taskbar-notification"></div>
+
+        <div id="start-menu">
+            <div id="start-menu-margin"></div>
+            <ul>
+                <li><img>Windows Update</li>
+                <hr>
+                <li>Programs</li>
+                <li>Favorites</li>
+                <li>Documments</li>
+                <li>Settings</li>
+                <li>Find</li>
+                <li>Help</li>
+                <li>Run...</li>
+                <hr>
+                <li>Log Off Archive...</li>
+                <li>Shut Down</li>
+            </ul>
+        </div>
     </div>
 
-    <div id="start-menu">
-        <div id="start-menu-margin"></div>
-        <ul>
-            <li><img>Windows Update</li>
-            <hr>
-            <li>Programs</li>
-            <li>Favorites</li>
-            <li>Documments</li>
-            <li>Settings</li>
-            <li>Find</li>
-            <li>Help</li>
-            <li>Run...</li>
-            <hr>
-            <li>Log Off Archive...</li>
-            <li>Shut Down</li>
-        </ul>
-    </div>
+
 
     <script src="app.js"></script>
 </body>
