--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         </audio>
     </div>
     <div id="win98">
+
+        <div class="nocd">
+
+                </div>
+            
         <div id="start-bar">
             <div id="start-bar-top-border"></div>
             <div id="start">
