--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     </div>
     <div id="win98">
 
-        <div class="nocd">
+        <div class="winderror">
+            <div class="winderror-header">
+                <span>My Computer</span>
+                <span class="winderror-close">x</span>
+            </div>
 
-                </div>
-            
+
+        </div>
+
         <div id="start-bar">
             <div id="start-bar-top-border"></div>
             <div id="start">
