desogn content wond err

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
             <div class="winderror-header">
                 <span>My Computer</span>
                 <span class="winderror-close">x</span>
+                <div class="winderror-content">
+                    <img src="" alt="error">
+                    <div class="winderror-mess">
+
+                    </div>
+
+                </div>
+                <div class="winderror-buttons">
+                    <input type="button" value="Cancel">
+                    <input type="button" value="Cancel">
+                </div>
             </div>
 
 
