create class winderr

--- a/index.html
+++ b/index.html
@@ -19,53 +19,54 @@
 
         <div class="winderror">
             <div class="winderror-header">
-                <span>My Computer</span>
+                My Computer
                 <span class="winderror-close">x</span>
-                <div class="winderror-content">
-                    <img src="" alt="error">
-                    <div class="winderror-mess">
-
-                    </div>
-
-                </div>
-                <div class="winderror-buttons">
-                    <input type="button" value="Cancel">
-                    <input type="button" value="Cancel">
+            </div>
+            <div class="winderror-content">
+                <img src="https://i.ibb.co/RDTpHPQ/err.png" id="errimg" alt="error">
+                <div class="winderror-mess">
+                    <p>D:\ is not accessible.</p>
+                    <p>The device is not ready.</p>
                 </div>
             </div>
-
-
-        </div>
-
-        <div id="start-bar">
-            <div id="start-bar-top-border"></div>
-            <div id="start">
-                <img src="https://i.ibb.co/L8m239F/log-start.png">
-                Start
+            <div class="winderror-button">
+                <input type="button" value="Retry">
+                <!-- <input type="button" value="Cancel"> -->
             </div>
-            <div class="bar"></div>
-            <div id="taskbar-icons"></div>
-            <div class="bar"></div>
-            <div id="taskbar-notification"></div>
         </div>
 
-        <div id="start-menu">
-            <div id="start-menu-margin"></div>
-            <ul>
-                <li><img>Windows Update</li>
-                <hr>
-                <li>Programs</li>
-                <li>Favorites</li>
-                <li>Documments</li>
-                <li>Settings</li>
-                <li>Find</li>
-                <li>Help</li>
-                <li>Run...</li>
-                <hr>
-                <li>Log Off Archive...</li>
-                <li>Shut Down</li>
-            </ul>
+
+    </div>
+
+    <div id="start-bar">
+        <div id="start-bar-top-border"></div>
+        <div id="start">
+            <img src="https://i.ibb.co/L8m239F/log-start.png">
+            Start
         </div>
+        <div class="bar"></div>
+        <div id="taskbar-icons"></div>
+        <div class="bar"></div>
+        <div id="taskbar-notification"></div>
+    </div>
+
+    <div id="start-menu">
+        <div id="start-menu-margin"></div>
+        <ul>
+            <li><img>Windows Update</li>
+            <hr>
+            <li>Programs</li>
+            <li>Favorites</li>
+            <li>Documments</li>
+            <li>Settings</li>
+            <li>Find</li>
+            <li>Help</li>
+            <li>Run...</li>
+            <hr>
+            <li>Log Off Archive...</li>
+            <li>Shut Down</li>
+        </ul>
+    </div>
     </div>
 
 
