--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div id="win98">
 
-        <div class="winderror">
+      <!--   <div class="winderror">
             <div class="winderror-header">
                 My Computer
                 <span class="winderror-close">x</span>
@@ -25,15 +25,15 @@
             <div class="winderror-content">
                 <img src="https://i.ibb.co/RDTpHPQ/err.png" id="errimg" alt="error">
                 <div class="winderror-mess">
-                    <p>D:\ is not accessible.</p>
-                    <p>The device is not ready.</p>
+                    D:\ is not accessible.<br>
+                    The device is not ready.
                 </div>
             </div>
             <div class="winderror-button">
                 <input type="button" value="Retry">
-                <!-- <input type="button" value="Cancel"> -->
+                <input type="button" value="Cancel"> 
             </div>
-        </div>
+        </div> -->
 
 
     </div>
