--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
     <div id="start-menu">
         <div id="start-menu-margin"></div>
         <ul>
-            <li><img>Windows Update</li>
+            <li><img src="https://i.ibb.co/4N5QXSz/updic.png"><p>Windows Update</p></li>
             <hr>
-            <li>Programs</li>
-            <li>Favorites</li>
-            <li>Documments</li>
-            <li>Settings</li>
-            <li>Find</li>
-            <li>Help</li>
-            <li>Run...</li>
+            <li><img src="https://i.ibb.co/LPXZzWP/progic.png"><p>Programs</p></li>
+            <li><img src="https://i.ibb.co/hKtf6Jw/favs.png"><p>Favorites</p></li>
+            <li><img src="https://i.ibb.co/L8dP9w2/docic.png"><p>Documents</p></li>
+            <li><img src="https://i.ibb.co/TLqLd9N/settic.png"><p>Settings</p></li>
+            <li><img src="https://i.ibb.co/GWg5kdX/searic.png"><p>Find</p></li>
+            <li><img src="https://i.ibb.co/rmFhP0W/turnofic.png"><p>Help</p></li>
+            <li><img src="https://i.ibb.co/PYYN6YG/runic.png"><p>Run...</p></li>
             <hr>
-            <li>Log Off Archive...</li>
-            <li>Shut Down</li>
+            <li><img src="https://i.ibb.co/jGqtMjd/log-start.png"><p>Log Off Archive...</p></li>
+            <li><img src="https://i.ibb.co/Sw1TJbK/sds.png"><p>Shut Down</p></li>
         </ul>
     </div>
     </div>
