fix start menu boot screen

--- a/index.html
+++ b/index.html
@@ -16,40 +16,58 @@
         </audio>
     </div>
     <div id="win98">
-    </div>
-
-    <div id="start-bar">
-        <div id="start-bar-top-border"></div>
-        <div id="start">
-            <img src="https://i.ibb.co/L8m239F/log-start.png">
-            Start
+        <div id="start-bar">
+            <div id="start-bar-top-border"></div>
+            <div id="start">
+                <img src="https://i.ibb.co/L8m239F/log-start.png">
+                Start
+            </div>
+            <div class="bar"></div>
+            <div id="taskbar-icons"></div>
+            <div class="bar"></div>
+            <div id="taskbar-notification"></div>
         </div>
-        <div class="bar"></div>
-        <div id="taskbar-icons"></div>
-        <div class="bar"></div>
-        <div id="taskbar-notification"></div>
+
+        <div id="start-menu">
+            <div id="start-menu-margin"></div>
+            <ul>
+                <li><img src="https://i.ibb.co/4N5QXSz/updic.png">
+                    <p>Windows Update</p>
+                </li>
+                <hr>
+                <li><img src="https://i.ibb.co/LPXZzWP/progic.png">
+                    <p>Programs</p>
+                </li>
+                <li><img src="https://i.ibb.co/hKtf6Jw/favs.png">
+                    <p>Favorites</p>
+                </li>
+                <li><img src="https://i.ibb.co/L8dP9w2/docic.png">
+                    <p>Documents</p>
+                </li>
+                <li><img src="https://i.ibb.co/TLqLd9N/settic.png">
+                    <p>Settings</p>
+                </li>
+                <li><img src="https://i.ibb.co/GWg5kdX/searic.png">
+                    <p>Find</p>
+                </li>
+                <li><img src="https://i.ibb.co/rmFhP0W/turnofic.png">
+                    <p>Help</p>
+                </li>
+                <li><img src="https://i.ibb.co/PYYN6YG/runic.png">
+                    <p>Run...</p>
+                </li>
+                <hr>
+                <li><img src="https://i.ibb.co/2WGw3mt/logic.png">
+                    <p>Log Off...</p>
+                </li>
+                <li><img src="https://i.ibb.co/Sw1TJbK/sds.png">
+                    <p>Shut Down...</p>
+                </li>
+            </ul>
+        </div>
     </div>
 
-    <div id="start-menu">
-        <div id="start-menu-margin"></div>
-        <ul>
-            <li><img src="https://i.ibb.co/4N5QXSz/updic.png"><p>Windows Update</p></li>
-            <hr>
-            <li><img src="https://i.ibb.co/LPXZzWP/progic.png"><p>Programs</p></li>
-            <li><img src="https://i.ibb.co/hKtf6Jw/favs.png"><p>Favorites</p></li>
-            <li><img src="https://i.ibb.co/L8dP9w2/docic.png"><p>Documents</p></li>
-            <li><img src="https://i.ibb.co/TLqLd9N/settic.png"><p>Settings</p></li>
-            <li><img src="https://i.ibb.co/GWg5kdX/searic.png"><p>Find</p></li>
-            <li><img src="https://i.ibb.co/rmFhP0W/turnofic.png"><p>Help</p></li>
-            <li><img src="https://i.ibb.co/PYYN6YG/runic.png"><p>Run...</p></li>
-            <hr>
-            <li><img src="https://i.ibb.co/jGqtMjd/log-start.png"><p>Log Off Archive...</p></li>
-            <li><img src="https://i.ibb.co/Sw1TJbK/sds.png"><p>Shut Down</p></li>
-        </ul>
     </div>
-    </div>
-
-
 
     <script src="app.js"></script>
 </body>
