--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="boot">
-        <audio>
+        <audio autoplay>
             <source src="https://www.winhistory.de/more/winstart/ogg/win98.ogg" type="audio/ogg">
         </audio>
     </div>
