--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
             </ul>
         </div>
     </div>
-
-    </div>
-
+    <audio id="audio" src="https://guidebookgallery.org/sounds/winme/chord.wav" style="display: none;"></audio>
     <script src="app.js"></script>
 </body>
 
